Fix loading message

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     }
     </style>
   </head>
-  <body className="loading">
+  <body class="loading">
     <noscript>
       You need to enable JavaScript to run this test, though without it you're likely to only receive minimal ads...
     </noscript>
@@ -250,10 +250,7 @@
       </div>
       <div id="loader">
         <div class="loading-message">
-          <p>Please wait while we load an obnoxious amount of JavaScript.</p>
-          <p>
-            <small>You may need to disable adblocking extensions to run this app.</small>
-          </p>
+          <p>Doing some work...</p>
           <div class="sk-cube-grid">
             <div class="sk-cube sk-cube1"></div>
             <div class="sk-cube sk-cube2"></div>
