--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Am I blocking ads?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <script type="text/javascript" src="src/ads.js"></script>
     <style>
     @import url('https://fonts.googleapis.com/css?family=Rubik:400,500');
 
@@ -284,8 +283,6 @@
           // [testName, didItLoadSuccessfully]
         ];
 
-        // testResults.push(['local ads.js', window.DETECT_SRC_LOADED]);
-
         Promise.all([
           capturePromise(testResults, 'googleadservices tracker', testScriptTag('http://www.googleadservices.com/pagead/conversion.js')),
           capturePromise(testResults, 'twitter tracker', testScriptTag('static.ads-twitter.com/uwt.js')),
@@ -361,7 +358,7 @@
       function main() {
         runTests(onComplete);
       }
-      setTimeout(main, 1000);
+      main();
     }());
     </script>
   </body>
