--- a/index.html
+++ b/index.html
@@ -268,6 +268,8 @@
     </section>
     <script type="text/javascript">
     (function() {
+      var DEFAULT_TEST_TIMEOUT = 5000;
+
       console.log('Initializing detection logic');
 
       function capturePromise(testResults, name, promise) {
@@ -300,15 +302,17 @@
           }
 
           function _reject() {
+            console.log('here');
             clearTimeout(timerId);
             reject();
           }
 
-          var timerId = setTimeout(_reject, timeout || 2000);
+          var timerId = setTimeout(_reject, timeout || DEFAULT_TEST_TIMEOUT);
 
           var s = document.createElement('script');
           s.setAttribute('src', src);
           s.onload = _resolve;
+          s.onerror = _reject;
           document.body.appendChild(s);
         });
       }
